--- a/indicators/blended-net-liquidity-correlation.html
+++ b/indicators/blended-net-liquidity-correlation.html
@@ -9,7 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="../styles.css?v=shots1" />
+  <link rel="stylesheet" href="../styles.css?v=textrestore1" />
 </head>
 <body>
 
@@ -30,16 +30,16 @@
     <div class="container">
 
       <div class="indicator-nav">
-        <a href="adaptive-dual-ma-trend-ribbon.html?v=shots1" class="btn-secondary">← Previous</a>
+        <a href="adaptive-dual-ma-trend-ribbon.html?v=textrestore1" class="btn-secondary">← Previous</a>
         <a href="../index.html#indicators" class="btn-secondary">All indicators</a>
-        <a href="adaptive-dual-ma-trend-ribbon.html?v=shots1" class="btn-secondary">Next →</a>
+        <a href="adaptive-dual-ma-trend-ribbon.html?v=textrestore1" class="btn-secondary">Next →</a>
       </div>
 
       <h1>Blended Net Liquidity Correlation</h1>
 
       <p class="section-intro">
-        This indicator visualizes a customizable net liquidity model built from public FRED data and measures correlation between liquidity and price across multiple time windows.
-        The indicator is free to use; the script is protected.
+        Many traders use liquidity-based models to understand broad macro conditions and their potential influence on price.
+        This indicator provides a transparent, configurable net-liquidity framework built from public FRED series. The indicator is free to use; the script is protected.
       </p>
 
       <div class="doc-actions">
@@ -49,6 +49,7 @@
         </a>
       </div>
 
+      <!-- Screenshot -->
       <a class="chart-shot"
          href="https://www.tradingview.com/script/3u6UCRSH-Blended-Net-Liquidity-Correlation/"
          target="_blank" rel="noopener">
@@ -59,28 +60,97 @@
       <h2>How Traders Recreate This Without the Indicator</h2>
 
       <p>
-        You can approximate similar views manually in TradingView using symbol math with public macro series.
-        Traders often build expressions and smooth them to study broad liquidity direction.
+        Traders often approximate similar liquidity views manually using TradingView symbol math and public data series.
+        For example, you can combine multiple series using + / − / × / ÷ to build your own “net liquidity” proxy and overlay it on price.
       </p>
 
       <ol>
-        <li>Use TradingView symbol math to add/subtract series (example style: WALCL − RRP − TGA).</li>
-        <li>Apply smoothing (SMA) to reduce noise.</li>
-        <li>Compare against price and test different timeframes/offsets.</li>
+        <li>Use TradingView symbol math to combine public series into one line.</li>
+        <li>Apply smoothing to reduce noise.</li>
+        <li>Compare against price and test different offsets/timeframes.</li>
       </ol>
+
+      <p>
+        This indicator packages that workflow into a cleaner structure with component toggles, blending controls, smoothing options, and correlation windows.
+      </p>
+
+      <h2>Overview</h2>
+
+      <p>
+        Many traders use liquidity-based models to understand broad macro conditions and their potential influence on price. While institutional-grade models often rely on proprietary inputs,
+        the community frequently studies public FRED series—such as WALCL, RRP, TGA, and BTFP—to construct transparent net-liquidity frameworks that approximate capital movement within the financial system.
+      </p>
+
+      <p>
+        This script does not replicate or reverse-engineer any commercial macro indicator. Instead, it provides a fully open research framework for exploring how different liquidity components interact —
+        and how those liquidity dynamics correlate with market price across various time windows. All data comes from standard FRED series, and all calculations are fully disclosed for transparency at the behavior/input level.
+      </p>
 
       <h2>What the Script Does</h2>
 
+      <h3>1. Builds a customizable blended net-liquidity model</h3>
       <ul>
-        <li>Builds a blended net liquidity model from components like WALCL, RRP, TGA, BTFP, lending, and M2.</li>
-        <li>Allows turning components on/off and weighting models.</li>
-        <li>Computes correlation vs price across multiple windows and highlights the highest.</li>
-        <li>Plots liquidity against price for macro context.</li>
+        <li>Includes WALCL, RRP, TGA, BTFP, ΔTOTLL, and ΔM2</li>
+        <li>Allows turning each component on/off</li>
+        <li>Provides adjustable weighting for WALCL vs non-WALCL models</li>
+        <li>Smooths liquidity using optional SMA smoothing</li>
+        <li>Supports time-offsetting liquidity to study lagging effects</li>
+      </ul>
+
+      <h3>2. Runs multi-period price correlations</h3>
+      <ul>
+        <li>30D, 60D, 90D, 180D</li>
+        <li>1Y, 1.5Y, 2Y</li>
+        <li>Custom length (user-defined)</li>
+        <li>Displays all correlations in a compact table</li>
+        <li>Automatically highlights the highest correlation window</li>
+      </ul>
+
+      <h3>3. Plots the blended liquidity model directly on the main chart</h3>
+      <ul>
+        <li>Uses the right-side scale</li>
+        <li>Clean visual overlay</li>
+        <li>Helps compare liquidity shifts against price structure</li>
+      </ul>
+
+      <h3>4. Maintains transparency and reproducibility</h3>
+      <ul>
+        <li>All data sourced from public FRED datasets</li>
+        <li>No proprietary formulas</li>
+        <li>Designed for research, modification, and extension</li>
+      </ul>
+
+      <h2>Why This Script Is Useful</h2>
+
+      <p>
+        Traditional liquidity charts often plot only one variable at a time. This model adds clarity by:
+      </p>
+
+      <ol>
+        <li>Combining multiple macro liquidity components into a unified metric</li>
+        <li>Allowing control over which components are included</li>
+        <li>Providing a smooth blended output that is easy to compare with price</li>
+        <li>Offering multi-window correlation analysis to measure relationships</li>
+        <li>Helping explore whether liquidity leads, lags, or coincides with price</li>
+      </ol>
+
+      <p>
+        This tool is ideal for macro-focused traders, swing traders, crypto/macro analysts, and anyone studying how systemic liquidity impacts market behavior.
+      </p>
+
+      <h2>Important Notes</h2>
+
+      <ul>
+        <li>FRED data updates weekly and may revise historical values</li>
+        <li>Correlation does not imply causation</li>
+        <li>Liquidity models are approximations, not definitive forecasts</li>
+        <li>Always validate settings on multiple timeframes and assets</li>
       </ul>
 
       <h2>Disclaimer</h2>
+
       <p>
-        Educational use only. This is not financial advice.
+        This script is for research and educational purposes only. Always use proper risk management and validate all ideas before trading live.
       </p>
 
     </div>
